# jni_poc_memory

./: .gitignore  pom.xml
src/main/java/: Main.java  PersonNative.java
src/main/native/: CMakeLists.txt  Main.cpp  Person.cpp  Person.h  Person_JNI.cpp
